--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -139,7 +139,19 @@ import { Icon } from "astro-icon/components";
                 <div class="text-sm text-black/50 dark:text-white/50">https://space.bilibili.com/44681442</div>
             </a>
         </div>
+                <!-- 已赞助的小伙伴 -->
+                <div class="sponsors-section mt-8">
+                    <h2 class="text-xl font-bold text-black dark:text-white mb-4 flex items-center gap-2">
+                        <Icon name="material-symbols:group" class="text-[1.5rem] text-[var(--primary)]"/>
+                        将您的网站加入本站友链
+                    </h2>
+                    <p class="text-sm text-black/60 dark:text-white/60">
+                    请发送标准格式的申请表，<a href="mailto:acofork@foxmail.com?subject=申请友链 - AcoFork Blog&body=网站名称%EF%BC%9A%0A网站图标%EF%BC%88可选%EF%BC%89%EF%BC%9A%0A网站简介%EF%BC%9A%0A网站链接%EF%BC%9A%0A申请理由%EF%BC%9A" class="transition link text-[var(--primary)] font-medium underline">点击这里发送</a>
+        
+                    </p>
+                    <br>
     </div>
+    
 </MainGridLayout>
 
 <style>
