feat(友链): 新增fulie blog和呐吼两个友链

--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -159,6 +159,20 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">成分复杂</div>
             </a>
+            <a href="https://fulie.top/" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://q2.qlogo.cn/headimg_dl?dst_uin=3672492995&spec=5" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">fulie blog</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">永不后悔</div>
+            </a>
+            <a href="https://www.nahou.com/" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://www.nahou.com/i/icon.webp" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">呐吼</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">不止于沉默</div>
+            </a>
             <a href="https://sub.grgk.me" target="_blank" class="friend-card">
                 <div class="flex items-center gap-2">
                     <img src="https://q2.qlogo.cn/headimg_dl?dst_uin=1662352474&spec=5" class="w-5 h-5 rounded"/>
