feat: 在友链页面添加Zirkeln和mxd's Planet的链接

--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -334,6 +334,20 @@ import { Icon } from "astro-icon/components";
                 </div>
                 <div class="text-sm text-black/50 dark:text-white/50">一个高中生的博客</div>
             </a>
+            <a href="https://zrn.net" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://zrn.net/wp-content/uploads/2025/07/seia_avatar.jpg.webp" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">Zirkeln</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">欢迎来到我的个人网站！这里是我作为一名计算机科学爱好者和 ACG（动画、漫画、游戏）迷，分享我对计算机技术、动画、漫画小说和电子音乐（EDM）等多元兴趣的乐园。</div>
+            </a>
+            <a href="https://www.mxdyeah.top/" target="_blank" class="friend-card">
+                <div class="flex items-center gap-2">
+                    <img src="https://www.mxdyeah.top/favicon.ico" class="w-5 h-5 rounded"/>
+                    <div class="font-bold text-black dark:text-white">mxd's Planet</div>
+                </div>
+                <div class="text-sm text-black/50 dark:text-white/50">平平无奇的菜鸟，喜欢干点自己喜欢做的事情。</div>
+            </a>
         </div>
                 <!-- 申请友链 -->
                 <div class="sponsors-section mt-8">
