posts: 删除矩阵相关的加入教程 对EO反代一切添加一个明确的方法 添加Giscus+反垃圾评论集成方法 添加“光棱坦克”制作方法 添加详细的操作结果针对于SSHFS 仅将 2x.nz 视为官方域名

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -289,7 +289,7 @@ var _hmt = _hmt || [];
 		<div id="page-height-extend" class="hidden h-[300vh]"></div>
 
 		<!-- 域名检测脚本 -->
-		<script is:inline define:vars={{officialSites: ["https://2x.nz", "http://46.232.60.28"]}}>
+		<script is:inline define:vars={{officialSites: ["https://2x.nz"]}}>
 			// 域名检测功能
 			function checkDomain() {
 				try {
