--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@ const currentYear = new Date().getFullYear();
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/afoim/fuwari">源码</a>
         <br>
         本站使用
-        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://www.netlify.com/">Netlify</a> 部署
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://www.netlify.com/">Netlify</a> 部署并加速
 
     </div>
 </div>
