docs(Footer): 移除Netlify部署信息

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ const currentYear = new Date().getFullYear();
         <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/afoim/fuwari">已开源</a>
         <br>
         本站使用
-        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://www.netlify.com/">Netlify</a> 部署并加速
+        <a class="transition link text-[var(--primary)] font-medium" target="_blank" href="https://secbit.ai/">Secbit</a> 加速
 
     </div>
 </div>
